connect redislab and jwt module
